teach how to start the jar